1. modify css jslide wrap position to fixed. 2. modify jslide html tag.

--- a/jquery.Jslide.css
+++ b/jquery.Jslide.css
@@ -1,12 +1,14 @@
 .Jslide-wrap {
 	width:100%; height:100%;
-	position:absolute;
+	position:fixed;
+	*position:absolute;
 	top:0; left:0;
 }
 
 .Jslide-wrap.working {
 	background-color: #fff;
 	opacity: .5;
+	filter:alpha(opacity=50);
 }
 
 .Jslide-container {
@@ -16,6 +18,7 @@
 	margin: 0 auto;
 	background-color: #ccc;
 	opacity:0;
+	filter:alpha(opacity=0);
 }
 
 .Jslide-carousel {
@@ -34,10 +37,12 @@
 	height: 800px;
 	float: left;
 	opacity:.2;
+	filter:alpha(opacity=20);
 }
 
 .Jslide-carousel li.step {
 	opacity:1;
+	filter:alpha(opacity=100);
 }
 
 .Jslide-nav {
@@ -58,10 +63,12 @@
 	margin-top: -50px;
 	cursor:pointer;
 	opacity:.8;
+	filter:alpha(opacity=80);
 }
 .Jslide-next:hover,
 .Jslide-prev:hover {
 	opacity:1;
+	filter:alpha(opacity=100);
 }
 
 .Jslide-next {
@@ -84,6 +91,7 @@
 	height:100px;
 	background-color: #fff;
 	opacity:.7;
+	filter:alpha(opacity=70);
 }
 .Jslide-page {
 	background-color: #000;
@@ -91,12 +99,15 @@
 	float: left;
 	cursor:pointer;
 	opacity:0;
+	filter:alpha(opacity=0);
 }
 .Jslide-page.step {
 	opacity:.3;
+	filter:alpha(opacity=30);
 }
 .Jslide-page:hover {
 	opacity:.6;
+	filter:alpha(opacity=60);
 }
 
 .Jslide-broad {
@@ -108,6 +119,7 @@
 	width:25%;
 	word-break:break-all;
 	opacity: .8;
+	filter:alpha(opacity=80);
 }
 
 .Jslide-broad h1,
@@ -133,8 +145,10 @@
 	font-size: 20px;
 	cursor: pointer;
 	opacity:.8;
+	filter:alpha(opacity=80);
 	z-index: 2;
 }
 .Jslide-close:hover {
 	opacity:1;
+	filter:alpha(opacity=100);
 }
